--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import pandas as pd\n",
+    "im"
    ]
   },
   {
