--- a/index.ipynb
+++ b/index.ipynb
@@ -85,12 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "im"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
