--- a/index.ipynb
+++ b/index.ipynb
@@ -323,33 +323,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id         False\n",
-       "feat_1     False\n",
-       "feat_2     False\n",
-       "feat_3     False\n",
-       "feat_4     False\n",
-       "           ...  \n",
-       "feat_90    False\n",
-       "feat_91    False\n",
-       "feat_92    False\n",
-       "feat_93    False\n",
-       "target     False\n",
-       "Length: 95, dtype: bool"
+       "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.isna().any()"
+    "data.isna().any().sum()"
    ]
   },
   {
