Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "feat.boxplot(figsize=(10))"
    ]
   },
   {
