Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -414,12 +414,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "fea"
+    "feat.isna().any().any()"
    ]
   },
   {
