Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feat = data/loc[:, 'fe']"
+    "feat = data/loc[:, 'feat_1':'feat_93']\n",
+    "\n",
+    "impor"
    ]
   },
   {
