--- a/index.ipynb
+++ b/index.ipynb
@@ -455,7 +455,8 @@
    "source": [
     "feat = data/loc[:, 'feat_1':'feat_93']\n",
     "\n",
-    "impor"
+    "import seaborn as sns\n",
+    "sns.heatmap(feat.corr(), center=0)"
    ]
   },
   {
