Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.dec"
+    "from sklearn.decomposition import PCA\n",
+    "pca_1 = PCA()"
    ]
   },
   {
