--- a/index.ipynb
+++ b/index.ipynb
@@ -496,7 +496,8 @@
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
-    "pca_1 = PCA()"
+    "pca_1 = PCA(n_components=20)\n",
+    "pca_2 = PCA()"
    ]
   },
   {
