Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,8 @@
    "source": [
     "from sklearn.decomposition import PCA\n",
     "pca_1 = PCA(n_components=20)\n",
-    "pca_2 = PCA()"
+    "pca_2 = PCA(n_components=40)\n",
+    "pca_3 = PCA(n_components=)"
    ]
   },
   {
