Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -498,7 +498,9 @@
     "from sklearn.decomposition import PCA\n",
     "pca_1 = PCA(n_components=20)\n",
     "pca_2 = PCA(n_components=40)\n",
-    "pca_3 = PCA(n_components=)"
+    "pca_3 = PCA(n_components=60)\n",
+    "\n",
+    "principalComponents = pca"
    ]
   },
   {
