Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -500,6 +500,7 @@
     "pca_2 = PCA(n_components=40)\n",
     "pca_3 = PCA(n_components=60)\n",
     "\n",
+    "principalComponents = pca_1.fit_transform(feat)\n",
     "principalComponents = pca"
    ]
   },
