--- a/index.ipynb
+++ b/index.ipynb
@@ -501,7 +501,8 @@
     "pca_3 = PCA(n_components=60)\n",
     "\n",
     "principalComponents = pca_1.fit_transform(feat)\n",
-    "principalComponents = pca"
+    "principalComponents = pca_2.fit_transform(feat)\n",
+    "principalComponents = pca_"
    ]
   },
   {
