Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -502,7 +502,9 @@
     "\n",
     "principalComponents = pca_1.fit_transform(feat)\n",
     "principalComponents = pca_2.fit_transform(feat)\n",
-    "principalComponents = pca_"
+    "principalComponents = pca_3.fit_transform(feat)\n",
+    "\n",
+    "print(np.sum(pca_1.e))"
    ]
   },
   {
