--- a/index.ipynb
+++ b/index.ipynb
@@ -504,7 +504,8 @@
     "principalComponents = pca_2.fit_transform(feat)\n",
     "principalComponents = pca_3.fit_transform(feat)\n",
     "\n",
-    "print(np.sum(pca_1.e))"
+    "print(np.sum(pca_1.explained_variance_ratio_))\n",
+    "print(np.sum(pca))"
    ]
   },
   {
