Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -505,7 +505,8 @@
     "principalComponents = pca_3.fit_transform(feat)\n",
     "\n",
     "print(np.sum(pca_1.explained_variance_ratio_))\n",
-    "print(np.sum(pca))"
+    "print(np.sum(pca_2.explained_variance_ratio_))\n",
+    "print(np.sum(pca_))"
    ]
   },
   {
