Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,9 @@
     "\n",
     "print(np.sum(pca_1.explained_variance_ratio_))\n",
     "print(np.sum(pca_2.explained_variance_ratio_))\n",
-    "print(np.sum(pca_))"
+    "print(np.sum(pca_3.explained_variance_ratio_))\n",
+    "\n",
+    "pca = PCA()"
    ]
   },
   {
