Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -508,7 +508,8 @@
     "print(np.sum(pca_2.explained_variance_ratio_))\n",
     "print(np.sum(pca_3.explained_variance_ratio_))\n",
     "\n",
-    "pca = PCA()"
+    "pca = PCA(n_components=27)\n",
+    "principalCompo"
    ]
   },
   {
