Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -509,7 +509,8 @@
     "print(np.sum(pca_3.explained_variance_ratio_))\n",
     "\n",
     "pca = PCA(n_components=27)\n",
-    "principalCompo"
+    "principalComponents = pca.fit_transform(feat)\n",
+    "print(np.sum())"
    ]
   },
   {
