Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -510,7 +510,7 @@
     "\n",
     "pca = PCA(n_components=27)\n",
     "principalComponents = pca.fit_transform(feat)\n",
-    "print(np.sum())"
+    "print(np.sum(pca.explained_variance_ratio))"
    ]
   },
   {
