Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -530,7 +530,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "import seaborn as sns\n",
+    "sns.heatmap(pd.DataFra)"
    ]
   },
   {
