Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
    "source": [
     "# Your code here\n",
     "import seaborn as sns\n",
-    "sns.heatmap(pd.DataFra)"
+    "sns.heatmap(pd.DataFrame(principalComponents).corr())"
    ]
   },
   {
