Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -573,7 +573,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "y = data['target']\n",
+    "X = data."
    ]
   },
   {
