Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -575,7 +575,7 @@
    "source": [
     "# Your code here\n",
     "y = data['target']\n",
-    "X = data."
+    "X = data.loc[:, 'feat_1']"
    ]
   },
   {
