Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -569,13 +569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
     "y = data['target']\n",
-    "X = data.loc[:, 'feat_1']"
+    "X = data.loc[:, 'feat_1':'feat_93']"
    ]
   },
   {
@@ -584,7 +584,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "from sklear"
    ]
   },
   {
