--- a/index.ipynb
+++ b/index.ipynb
@@ -585,7 +585,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "from sklear"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X"
    ]
   },
   {
