--- a/index.ipynb
+++ b/index.ipynb
@@ -586,7 +586,7 @@
    "source": [
     "# Your code here\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,.)"
    ]
   },
   {
