--- a/index.ipynb
+++ b/index.ipynb
@@ -614,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "from sklearn.linear_model import Logis"
    ]
   },
   {
