--- a/index.ipynb
+++ b/index.ipynb
@@ -610,11 +610,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import Logis"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
