Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -624,7 +624,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "#Construct some pipelines\n",
+    "pipe_lr = Pipe"
    ]
   },
   {
