Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
    "outputs": [],
    "source": [
     "#Construct some pipelines\n",
-    "pipe_lr = Pipe"
+    "pipe_lr = Pipeline([('pca', P)])"
    ]
   },
   {
