--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
    "outputs": [],
    "source": [
     "#Construct some pipelines\n",
-    "pipe_lr = Pipeline([('pca', P)])"
+    "pipe_lr = Pipeline([('pca', PCA(n_components=27, random))])"
    ]
   },
   {
