Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,8 @@
    "outputs": [],
    "source": [
     "#Construct some pipelines\n",
-    "pipe_lr = Pipeline([('pca', PCA(n_components=27, random))])"
+    "pipe_lr = Pipeline([('pca', PCA(n_components=27, random_state=123)),\n",
+    "                   ])"
    ]
   },
   {
