Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -626,7 +626,9 @@
    "source": [
     "#Construct some pipelines\n",
     "pipe_lr = Pipeline([('pca', PCA(n_components=27, random_state=123)),\n",
-    "                    ('clf', LogisticRegression(random_state=123))])"
+    "                    ('clf', LogisticRegression(random_state=123))])\n",
+    "\n",
+    "pipe_lr.fit"
    ]
   },
   {
