Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -628,7 +628,9 @@
     "pipe_lr = Pipeline([('pca', PCA(n_components=27, random_state=123)),\n",
     "                    ('clf', LogisticRegression(random_state=123))])\n",
     "\n",
-    "pipe_lr.fit"
+    "pipe_lr.fit(X_train, y_train)\n",
+    "\n",
+    "print(pipe_lr.score())"
    ]
   },
   {
