--- a/index.ipynb
+++ b/index.ipynb
@@ -622,7 +622,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:469: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#Construct some pipelines\n",
     "pipe_lr = Pipeline([('pca', PCA(n_components=27, random_state=123)),\n",
@@ -630,7 +641,7 @@
     "\n",
     "pipe_lr.fit(X_train, y_train)\n",
     "\n",
-    "print(pipe_lr.score())"
+    "print(pipe_lr.score(X_test, y_test))"
    ]
   },
   {
