Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -631,6 +631,13 @@
       "  FutureWarning)\n",
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:469: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
       "  \"this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7171541693600517\n"
      ]
     }
    ],
@@ -650,7 +657,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "np.sum(pipe_)"
    ]
   },
   {
