Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -658,7 +658,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "np.sum(pipe_)"
+    "np.sum(pipe_lr.predict(X_test) == y_test)"
    ]
   },
   {
