Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -653,12 +653,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7171541693600517"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "np.sum(pipe_lr.predict(X_test) == y_test)"
+    "np.sum(pipe_lr.predict(X_test) == y_test)/len(y_test)"
    ]
   },
   {
