--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "# ⏰ This cell may take several minutes to run"
+    "# ⏰ This cell may take several minutes to run\n",
+    "from sklearn import svm\n"
    ]
   },
   {
