Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -697,7 +697,9 @@
    "source": [
     "# Your code here\n",
     "# ⏰ This cell may take several minutes to run\n",
-    "from sklearn import svm\n"
+    "from sklearn import svm\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import"
    ]
   },
   {
