--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,9 @@
     "# ⏰ This cell may take several minutes to run\n",
     "from sklearn import svm\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn import tree\n",
+    "\n"
    ]
   },
   {
