--- a/index.ipynb
+++ b/index.ipynb
@@ -693,7 +693,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline(memory=None,\n",
+      "         steps=[('pca',\n",
+      "                 PCA(copy=True, iterated_power='auto', n_components=27,\n",
+      "                     random_state=None, svd_solver='auto', tol=0.0,\n",
+      "                     whiten=False)),\n",
+      "                ('clf',\n",
+      "                 SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "                     decision_function_shape='ovr', degree=3,\n",
+      "                     gamma='auto_deprecated', kernel='rbf', max_iter=-1,\n",
+      "                     probability=False, random_state=123, shrinking=True,\n",
+      "                     tol=0.001, verbose=False))],\n",
+      "         verbose=False)\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "# ⏰ This cell may take several minutes to run\n",
@@ -701,7 +720,30 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import tree\n",
-    "\n"
+    "\n",
+    "## KEEP IT FOR NOW\n",
+    "# Construct some pipelines\n",
+    "pipe_svm = Pipeline([('pca', PCA(n_components=27)), \n",
+    "                     ('clf', svm.SVC(random_state=123))])\n",
+    "        \n",
+    "pipe_tree = Pipeline([('pca', PCA(n_components=27)), \n",
+    "                      ('clf', tree.DecisionTreeClassifier(random_state=123))])\n",
+    "\n",
+    "pipe_rf = Pipeline([('pca', PCA(n_components=27)), \n",
+    "                    ('clf', RandomForestClassifier(random_state=123))])\n",
+    "\n",
+    "# List of pipelines and pipeline names\n",
+    "pipelines = [pipe_svm, pipe_tree, pipe_rf]\n",
+    "pipeline_names = ['Support Vector Machine','Decision Tree','Random Forest']\n",
+    "\n",
+    "# Loop to fit each of the three pipelines\n",
+    "for pipe in pipelines:\n",
+    "    print(pipe)\n",
+    "    pipe.fit(X_train, y_train)\n",
+    "\n",
+    "# Compare accuracies\n",
+    "for index, val in enumerate(pipelines):\n",
+    "    print('%s pipeline test accuracy: %.3f' % (pipeline_names[index], val.score(X_test, y_test)))"
    ]
   },
   {
